# xgl2d

./: .gitignore  CMakeLists.txt  README.md
assets/shader/: fragmentshader.glsl  newfragmentshader.glsl  newfragmentshader.glsl.frag  newvertexshader.glsl  newvertexshader.glsl.vert  vertexshader.glsl
include/core/: glcore.h  gls.h
src/: main.cpp
src/logger/: logger.cpp  logger.h
src/mesh/: mesh.cpp  mesh.h  quad.h  texturepool.cpp  texturepool.h  xmesh.cpp  xmesh.h  xquadmesh.cpp  xquadmesh.h
src/mesh/shape/: Oval.cpp  Oval.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  xcirclemesh.h  xovalmesh.cpp  xovalmesh.h  xquadmesh.cpp  xquadmesh.h
src/mesh/text/: text.cpp  text.h
src/newmesh/: mesh.cpp  mesh.h  quad.h
src/parallel/: CoreUser.h
src/shader/: shader.cpp  shader.h
src/texture/: MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.h  texture.cpp  texture.h  texturepool.cpp  texturepool.h
